@@ -7,12 +7,11 @@ import org.bukkit.entity.Player;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class InvisibilityItem extends GroundItem {
 
-    private static List<String> lores = Arrays.asList("Cet objet vous permet de vous rendre invisible aux autres joueurs.");
+    private static final List<String> lores = List.of("Cet objet vous permet de vous rendre invisible aux autres joueurs.");
 
     public InvisibilityItem() {
         super("invisibilityItem", Material.FERMENTED_SPIDER_EYE, "Invisibilité", lores, 1);
